@@ -1,6 +1,6 @@
 ## =============================================================================
 ## 
-# @(#) $RCSfile: lis.conf.in,v $ $Name:  $($Revision: 0.9.2.12 $) $Date: 2007/03/07 23:49:22 $
+# @(#) $RCSfile: lis.conf.in,v $ $Name:  $($Revision: 0.9.2.13 $) $Date: 2007/03/08 00:21:04 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -45,7 +45,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2007/03/07 23:49:22 $ by $Author: brian $
+## Last Modified $Date: 2007/03/08 00:21:04 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -70,9 +70,9 @@ objname	driver	tcp2		tcp
 ## -----------------------------------------------------------
 ##		name
 loadable	inet
-loadable	udp2
-loadable	rawip2
-loadable	tcp2
+loadable	udp
+loadable	rawip
+loadable	tcp
 
 ## Node specifications
 ## -----------------------------------------------------------
