@@ -1,5 +1,6 @@
 2007-03-07  Brian Bidulock  <bidulock@openss7.org>
 
+	* src/drivers/lis.conf.in: loadable takes object name not driver name
 	* src/drivers/lis.conf.in: clone device by name instead of number
 
 2007-03-06  Brian Bidulock  <bidulock@openss7.org>
